--- a/public/css/b3.css
+++ b/public/css/b3.css
@@ -168,6 +168,7 @@ a:hover {
     border-radius: 50%;
     padding: 3px;
     background-color: #d70303;
+    margin-left: -70%;
     /* position: absolute;
     margin-bottom: 15%;
     margin-left: 33%; */
