--- a/views/login.hbs
+++ b/views/login.hbs
@@ -83,7 +83,7 @@
                             <label class="custom-control-label" for="remember-me">Remember me</label>
                         </div>
 
-                        <span class="psw"> <a href="#">Forgot your password?</a></span>
+                        <span class="psw"> <a href="/forgotpass">Forgot your password?</a></span>
                         <br>
                         <button type="submit" class="btn btn-primary btn-custom">
                             Log in
