--- a/views/partials/navbarAdminPartial.hbs
+++ b/views/partials/navbarAdminPartial.hbs
@@ -31,6 +31,8 @@
 
                 <div class="dropdown-menu dropdown-menu-right">
                     <a class="dropdown-item" href="/profile">Profile</a>
+                    <a class="dropdown-item" href="/admin">Admin</a>
+                    <a class="dropdown-item" href="/">Booking</a>
                     <a class="dropdown-item" href="#">Help</a>
                     <a class="dropdown-item" href="/users/logout">Log out</a>
                 </div>
