fix link filter masterdata

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -13,7 +13,7 @@
                      <a class="nav-item nav-link a2-nav-link " id="nav-home-tab" href="/masterdata">Master
                          Data</a>
                      <a class="nav-item nav-link a2-nav-link" id="nav-profile-tab" href="/transaction">Transaction</a>
-                     <a class="nav-item nav-link a2-nav-link active" id="nav-contact-tab" href="#">Report</a>
+                     <a class="nav-item nav-link a2-nav-link active" id="nav-contact-tab" href="/admin">Report</a>
                  </div>
              </nav>
          </div>
@@ -185,8 +185,8 @@
                                          <div class="input-date">
                                              <input placeholder="From" id="datefromID" type="text" name="datefrom"
                                                  class="datepicker-here form-control" data-language='en'
-                                                 data-multiple-dates="3" data-multiple-dates-separator=", "
-                                                 data-position='bottom right' autocomplete="off" />
+                                                 data-multiple-dates="1"
+                                                 data-position='bottom right' autocomplete="off" required />
                                              <i class="far fa-calendar-alt icon-date"></i>
                                          </div>
                                      </div>
@@ -195,8 +195,8 @@
                                          <div class="input-date">
                                              <input placeholder="To" id="datetoID" type="text" name="dateto"
                                                  class="datepicker-here form-control" data-language='en'
-                                                 data-multiple-dates="3" data-multiple-dates-separator=", "
-                                                 data-position='bottom right' autocomplete="off" />
+                                                 data-multiple-dates="1" 
+                                                 data-position='bottom right' autocomplete="off" required />
                                              <i class="far fa-calendar-alt icon-date"></i>
                                          </div>
                                      </div>
