--- a/views/paymentError.hbs
+++ b/views/paymentError.hbs
@@ -9,7 +9,7 @@
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 <div class="container text-center border p-5 mt-5 mb-5">
-    <h1 class="text-primary">Error</h1>
+    <h1 class="text-primary">Error {{info}}</h1>
     <h2>Please try again!</h2>
 
 </div>
