passport fb and google

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -101,7 +101,7 @@
                 <div class="container">
                     <div class="row align-content-center justify-content-center">
                         <div class="col-5">
-                            <a class="icon-left" href="">
+                            <a class="icon-left" href="/auth/facebook">
                                 <img id="icon-fb" src="/img/Logo/logo-fb.png" alt="">
                             </a>
 
@@ -111,7 +111,7 @@
                             <div class="line-vertical"></div>
                         </div>
                         <div class="col-5">
-                            <a class="icon-right" href="">
+                            <a class="icon-right" href="/auth/google">
                                 <img id="icon-gg" src="/img/Logo/logo-google.png" alt="">
                             </a>
                         </div>
