--- a/views/masterdata.hbs
+++ b/views/masterdata.hbs
@@ -33,10 +33,9 @@
                         <h4>TOOL</h4>
                         <div class="tools">
                             <a href="/users/masterdata/create" id="create" class="btn btn-custom">Create</a>
-                            <a href="#" id="import" class="btn btn-custom">Import</a>
+                            <a href="/users/masterdata/export" id="import" class="btn btn-custom">Export</a>
                             <br>
-                            <a href="#" id="export" class="btn btn-custom">Export</a>
-                            <a href="#" id="delete" class="btn btn-custom">Delete</a>
+                            
                         </div>
                     </div>
                     <div id="station-container" data-station="{{#each stations}}{{ten}}-{{id}};{{/each}}" hidden></div>
@@ -53,13 +52,10 @@
                                 <div class="dropdown-menu dropdown-menu-right">
                                     <a class=" dropdown-item" href="/users/masterdata">Departure database</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="/users/masterdata">Busroute database</a>
-                                    <div class="dropdown-divider"></div>
+                                
                                     <a class="dropdown-item" href="/users/masterdata">Saleoff database</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="/users/masterdata">Bus database</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="/users/masterdata">Bustype database</a>
+                
+                                    
                                 </div>
                             </div>
 
