update paypal, send ticket email

--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -5,12 +5,27 @@
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/a2.css">
 <div class="w-100 d-flex justify-content-center">
-    <div style="z-index: 100;" class="mt-2 alert position-fixed alert-danger alert-dismissible hidden text-center">
-    <button type="button" class="close pt-1 pl-1 pr-3" onclick="hideDanger()">&times;</button>
-    At least<strong> one Bus Type </strong> must be chosen.
-</div>
+    <div style="z-index: 100;" class="mt-2 alert position-fixed alert-danger alertDanger alert-dismissible hidden text-center">
+        <button type="button" class="close pt-1 pl-1 pr-3" onclick="hideDanger()">&times;</button>
+        At least<strong> one Bus Type </strong> must be chosen.
+    </div>
 </div>
 
+<div class="w-100 d-flex justify-content-center">
+    <div style="z-index: 100;" class="mt-2 alert alertError position-fixed alert-warning alert-dismissible hidden text-center">
+        <button type="button" class="close pt-1 pl-1 pr-3" onclick="hideError()">&times;</button>
+        Transaction is cancelled!
+    </div>
+</div>
+
+<div class="w-100 d-flex justify-content-center">
+    <div style="z-index: 100;" class="mt-2 alert alertSuccess position-fixed alert-success alert-dismissible hidden text-center">
+        <button type="button" class="close pt-1 pl-1 pr-3" onclick="hideSucess()">&times;</button>
+        Transaction is completed! Thank you.
+    </div>
+</div>
+
+<div class="w-100 h-100 unactivateDiv position-fixed hidden" id="unactivateDiv"></div>
 
 <span id="searchform-container" class="a2-searchform d-flex align-content-centera justify-content-center"
     data-station="{{#each stations}}{{ten}}-{{id}};{{/each}}">
