--- a/views/paymentError.hbs
+++ b/views/paymentError.hbs
@@ -10,7 +10,8 @@
 
 <div class="container text-center border p-5 mt-5 mb-5">
     <h1 class="text-primary">Error</h1>
-    <h2>{{note}}</h2>
+    <h3>{{note}}</h3>
+    <h5>Window will close in <p id="secondLeft" class="d-inline text-primary ">3</p> second(s)</h5>
 
 </div>
 
@@ -18,4 +19,4 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 <script src="/js/handlebars-v4.1.2.js"></script>
-<script src="/js/a1.js"></script>
+<script src="/js/errorPayment.js"></script>
