--- a/views/paymentSuccess.hbs
+++ b/views/paymentSuccess.hbs
@@ -11,6 +11,7 @@
 <div class="container text-center border p-5 mt-5 mb-5">
     <h1 class="text-success">Booking Completed</h1>
     <h2>Thank you for using our service! Have a nice trip!</h2>
+    <h4>Window will close in <p id="secondLeft" class="d-inline text-primary ">3</p> second(s)</h4>
 
 </div>
 
@@ -18,4 +19,4 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 <script src="/js/handlebars-v4.1.2.js"></script>
-<script src="/js/a1.js"></script>
+<script src="/js/successPayment.js"></script>
