--- a/public/css/a2.css
+++ b/public/css/a2.css
@@ -1,6 +1,15 @@
 body{
   background-color:#fcfcfc!important;
 }
+
+.unactivateDiv{
+  background-color: #494949;
+  opacity: 0.5;
+  z-index: 10000;
+  top: 0;
+  left: 0;
+}
+
 .a2-overlay {
   background-image: url("../img/A1/backgr.jpg");
   background-size: cover;
