--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -111,12 +111,12 @@
 
                              <div class="title-donut">Users visit then book bus</div>
                              {{#if datefrom}}
-                             <div class="subtitle-donut">From {{datefrom}} to {{dateto}}</div>
+                             <div class="subtitle-donutC">From {{datefrom}} to {{dateto}}</div>
                              {{else}}
-                             <div class="subtitle-donut">Calculated all time</div>
+                             <div class="subtitle-donutC">Calculated all time</div>
                              {{/if}}
 
-                             <a href="#" class="btn btn-primary" id="refresh" role="button" data-toggle="modal"
+                             <a href="#" class="btn btn-primaryC" id="refresh" role="button" data-toggle="modal"
                                  data-target="#myModal">REFRESH</a>
                          </div>
 
@@ -129,11 +129,11 @@
                          <div class="info-chart">
                              <div class="title-donut">Bus type used most</div>
                              {{#if datefrom}}
-                             <div class="subtitle-donut">From {{datefrom}} to {{dateto}}</div>
+                             <div class="subtitle-donutC">From {{datefrom}} to {{dateto}}</div>
                              {{else}}
-                             <div class="subtitle-donut">Calculated all time</div>
+                             <div class="subtitle-donutC">Calculated all time</div>
                              {{/if}}
-                             <a href="#" class="btn btn-primary" id="refresh" role="button" data-toggle="modal"
+                             <a href="#" class="btn btn-primaryC" id="refresh" role="button" data-toggle="modal"
                                  data-target="#myModal">REFRESH</a>
                          </div>
                      </div>
@@ -203,7 +203,7 @@
                                  </div>
                              </div>
                              <button type="submit" class="btn btn-primary float-right  mb-4 mr-4 mt-2" id="ok-btn"
-                                 data-dismiss="">OK</button>
+                                 data-dismiss="" style="color: white">OK</button>
                          </form>
                      </div>
                  </div>
