--- a/public/css/c3.css
+++ b/public/css/c3.css
@@ -244,7 +244,25 @@ a {
     width: 95%;
 }
 
+.subtitle-donutC,
+.btn-primaryC {
+    font-size: 14px;
+    margin-left: 50%;
+    color: #999999;
+    margin-bottom: 3px;
+}
 
+.btn-primaryC {
+    font-size: 12px ;
+    color: white ;
+    background-color: #D70303;
+    padding-top: 2px ;
+    padding-bottom: 2px ;
+}
+
+.btn-primaryC:hover{
+    color:white;
+}
 
 .c3-my-select {
     outline: none !important;
