--- a/views/partials/navbarGuessPartial.hbs
+++ b/views/partials/navbarGuessPartial.hbs
@@ -6,7 +6,7 @@
         </button>
         <div class="collapse navbar-collapse" style="width:100%" id="collapsibleNavId">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                    <li class="nav-item d-flex align-content-center justify-content-center align-items-center">
+                    {{!-- <li class="nav-item d-flex align-content-center justify-content-center align-items-center">
                             <div class="icon-container">
                                 <a id="search-toggle" class="nav-link" href="#">
                                     <i class="icon fas fa-search" style="font-size:16px"></i></a>
@@ -17,7 +17,7 @@
                         <li id="search-bar" class="nav-item align-items-center" style="display: none">
                                 <input type="text" class="form-control-plaintext control-inline my-inpyt-text"
                                 placeholder="Searching">
-                        </li>
+                        </li> --}}
                 <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact us</a>
                 </li>
