--- a/views/partials/navbarUserPartial.hbs
+++ b/views/partials/navbarUserPartial.hbs
@@ -2,7 +2,7 @@
             <a class="navbar-brand" href="/"><img id="homeLogo" src="/img/Logo/black.png" alt=""></a>
             <div class="my-navbar-collapse float-right"  id=" ">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0 flex-row">
-                    <li class="nav-item d-flex align-content-center justify-content-center align-items-center">
+                    {{!-- <li class="nav-item d-flex align-content-center justify-content-center align-items-center">
                         <div class="icon-container">
                             <a id="search-toggle" class="nav-link" href="#">
                                 <i class="icon fas fa-search" style="font-size:16px"></i></a>
@@ -14,7 +14,7 @@
                             <input type="text" class="form-control-plaintext control-inline my-inpyt-text"
                             placeholder="Searching">
                     </li>
-                    
+                     --}}
                     <li class="nav-item">
                         <a class="nav-link" href="/contact">Contact us</a>
                     </li>
