--- a/views/partials/userHistoryPartial.hbs
+++ b/views/partials/userHistoryPartial.hbs
@@ -1,7 +1,7 @@
 
     <div class="container-fluid  text-center d-flex flex-column my-table b3-table" id="search-table-result">
         <div class="row table-header big-label">
-                <div class="col-2"><a id="headerdate" class="listHeader" href="?order=date_desc">Date</a></div>
+                <div class="col-2"><a id="headertime" class="listHeader" href="?order=time_desc">Date</a></div>
                 <div class="col-2"><a id="headerlicensePlate" class="listHeader" href="?order=licensePlate_asc">License Plate</a></div>
                 <div class="col-2"><a id="headerdeparture" class="listHeader" href="?order=departure_asc">Departure</a></div>
                 <div class="col-2"><a id="headerinformation" class="listHeader" href="?order=information_asc">Information</a></div>
@@ -11,7 +11,7 @@
             <div class="b3-content-containter">
                         {{#each Transactions}}
                         <div class="row table-content">
-                                <div class="dateData col-2  active-filter">{{getDay createdAt}}</div>
+                                <div class="timeData col-2  active-filter">{{getDay createdAt}}</div>
                                 <div class="licensePlateData col-2">{{Chuyen.Xe.bienso}}</div>
                                 <div class="departureData col-2">{{getDay Chuyen.ngayGioKhoiHanh}}</div>
 
