--- a/views/partials/navbarUserPartial.hbs
+++ b/views/partials/navbarUserPartial.hbs
@@ -30,6 +30,7 @@
                             </button>
                             <div class="dropdown-menu dropdown-menu-right position-absolute">
                                 <a class="dropdown-item" href="/profile">Profile</a>
+                                <a class="dropdown-item" href="/users/changepass">Change password</a>
                                 <a class="dropdown-item" href="#">Help</a>
                                 <a class="dropdown-item" href="/users/logout">Log out</a>
                             </div>
