--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -122,9 +122,8 @@
                                 </div>
                                 <div class="p-relative">
                                     <div class="b3-title-form-opts">Password</div>
-                                    <input type="password" name="pasw" value="leai" readonly>
-                                    <img id="b3-icon-edit-password" src="/img/icon/baseline-create-24px-grey.svg"
-                                        alt="">
+                                    <input type="password" name="pasw" value="xxxxxxxx" readonly>
+                                    
                                 </div>
                                 <div class="p-relative">
                                     <div class="b3-title-form-opts">Phone number</div>
