--- a/views/partials/navbarAdminPartial.hbs
+++ b/views/partials/navbarAdminPartial.hbs
@@ -33,6 +33,7 @@
                     <a class="dropdown-item" href="/profile">Profile</a>
                     <a class="dropdown-item" href="/admin">Admin</a>
                     <a class="dropdown-item" href="/">Booking</a>
+                    <a class="dropdown-item" href="/users/changepass">Change password</a>
                     <a class="dropdown-item" href="#">Help</a>
                     <a class="dropdown-item" href="/users/logout">Log out</a>
                 </div>
